# ramsey-number-searcher

./: CMakeLists.txt  README.md
ramsey_numbers/: party_problem.txt
scripts/algorithm_visualisers/: all_combinations.py  coloring_construction.py  specific_combinations.py
src/: main.cpp
